# docs/swagger.json
@@ -26,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Menu"
+                            "$ref": "#/definitions/models.MenuInsertInput"
                         }
                     }
                 ],
@@ -300,7 +300,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.OrderInsertInput"
                         }
                     }
                 ],
@@ -702,7 +702,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Product"
+                            "$ref": "#/definitions/models.ProductInsertInput"
                         }
                     }
                 ],
@@ -758,7 +758,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ProductCategory"
+                            "$ref": "#/definitions/models.ProductCategoryInsertInput"
                         }
                     }
                 ],
@@ -1586,10 +1586,46 @@
                 }
             }
         },
+        "models.MenuInsertInput": {
+            "type": "object",
+            "required": [
+                "description",
+                "isAvailable",
+                "name",
+                "price",
+                "productsIDs"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "isAvailable": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "productsIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "models.MenuUpdateInput": {
             "type": "object",
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "image": {
                     "type": "string"
                 },
                 "isAvailable": {
@@ -1645,6 +1681,25 @@
                 },
                 "userID": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.OrderInsertInput": {
+            "type": "object",
+            "required": [
+                "items",
+                "ticketNumber"
+            ],
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "$ref": "#/definitions/models.OrderItemInput"
+                    }
+                },
+                "ticketNumber": {
+                    "type": "string"
                 }
             }
         },
@@ -1785,6 +1840,21 @@
                 }
             }
         },
+        "models.ProductCategoryInsertInput": {
+            "type": "object",
+            "required": [
+                "description",
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ProductCategoryUpdateInput": {
             "type": "object",
             "properties": {
@@ -1796,6 +1866,36 @@
                 }
             }
         },
+        "models.ProductInsertInput": {
+            "type": "object",
+            "required": [
+                "categoryID",
+                "description",
+                "isAvailable",
+                "name",
+                "price"
+            ],
+            "properties": {
+                "categoryID": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "isAvailable": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
         "models.ProductUpdateInput": {
             "type": "object",
             "properties": {
@@ -1803,6 +1903,9 @@
                     "type": "integer"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "image": {
                     "type": "string"
                 },
                 "isAvailable": {
